feat(auth): implement auth support JWT token and middleware
